# Langaje

./: .gitignore  CLASSIC.lang  CMakeLists.txt  CUSTOM.lang  Makefile  README.md  e.txt  fibonacci.gol  fr.gol  fr.txt  functions.c  functions.h  langaje  lexer.h  main.c  math.gol  meow.txt  out  prog  strings.fr.gol  strings.gol  test.gol  test.txt  test2.gol  test2.txt  test3.gol  test4.gol  test4.txt  testf.csv  testf.txt  token.h  types.c  types.h
examples/: e.gol  fibonacci.emoji.gol  sierpinskiFractal.gol
lang/: CLASSIC.lang  E.lang  FR.lang  MEOW.lang  e.lang  emoji.lang  fr.lang  meow.lang
libs/: strings.fr.gol
src/: main.c
src/ast/: ast.c  ast.h  node_initializers.c  node_initializers.h
src/cli/: cli.c  cli.h
src/errors/: errors.c  errors.h
src/functions/: functions.c  functions.h
src/hashtables/: hashtables.c  hashtables.h
src/interpreter/: __builtins__.c  __builtins__.h  interpreter.c  interpreter.h
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/parser/: assignment.c  assignment.h  condition.c  condition.h  expression.c  expression.h  function_declaration.c  function_declaration.h  loop.c  loop.h  parser.c  parser.h  var_declaration.c  var_declaration.h
src/structures/: ast.c  ast.h  dynamic_arrays.c  dynamic_arrays.h
src/types/: types.c  types.h
structures/: dynamic_arrays.c
types/: types.h
